添加代码高亮效果

--- a/css/default.css
+++ b/css/default.css
@@ -11,7 +11,9 @@
 *::before {
   box-sizing: bordr-box;
 }
-
+.token.comment{color: black}
+.token.selector{ color: black; }
+.token.property{ color: black; }
 body {
   display: flex;
   flex-direction: row;
